# ChangeLog for x11-misc/treeline
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/treeline/ChangeLog,v 1.42 2010/03/04 18:51:27 arfrever Exp $

  04 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  treeline-1.2.3.ebuild:
  Set SUPPORT_PYTHON_ABIS. Fix installation (bug #307515).

  07 Jan 2010; Joseph Jezak <josejx@gentoo.org> treeline-1.2.3.ebuild:
  Marked ppc stable for bug #297476.

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  treeline-1.2.3.ebuild:
  stable x86, bug 297628

  20 Dec 2009; Markos Chandras <hwoarang@gentoo.org> treeline-1.2.3.ebuild:
  Stable on amd64 wrt bug #297628

  06 Jun 2009; Ben de Groot <yngwin@gentoo.org> treeline-1.2.3.ebuild:
  Install documentation into /usr/share/doc/ and do not install LICENSE.

*treeline-1.2.3 (06 Jun 2009)

  06 Jun 2009; Ben de Groot <yngwin@gentoo.org> treeline-1.2.2.ebuild,
  +treeline-1.2.3.ebuild, +files/treeline-1.2.3-nocompile.patch:
  Add X use dep for PyQt4, bug 272189. Version bump, with some optimizations
  in the ebuild.

*treeline-1.2.2 (16 Mar 2009)

  16 Mar 2009; Peter Volkov <pva@gentoo.org> +treeline-1.2.2.ebuild:
  Version bump, bug #241810, thank Toni Budrović for report.

  26 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> treeline-1.0.2.ebuild:
  HOMEPAGE fixed, bug #214843

  23 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> treeline-1.0.2.ebuild:
  amd64 stable and fix quoting.

  16 Jul 2007; Raúl Porcel <armin76@gentoo.org> treeline-1.0.2.ebuild:
  x86 stable wrt #185280

  16 Jul 2007; nixnut <nixnut@gentoo.org> treeline-1.0.2.ebuild:
  Stable on ppc wrt bug 185280

*treeline-1.0.2 (07 Jun 2007)

  07 Jun 2007; Krzysiek Pawlik <nelchael@gentoo.org> +treeline-1.0.2.ebuild:
  Version bump, see bug #181126.

  20 May 2007; Christian Faulhammer <opfer@gentoo.org>
  treeline-1.0.1-r1.ebuild:
  added ~amd64, bug 177643

*treeline-1.0.1-r1 (16 May 2007)
