@@ -1,6 +1,13 @@
 # ChangeLog for x11-misc/treeline
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/treeline/ChangeLog,v 1.42 2010/03/04 18:51:27 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/treeline/ChangeLog,v 1.43 2010/07/05 21:44:32 hwoarang Exp $
+
+*treeline-1.3.3 (05 Jul 2010)
+*treeline-1.2.4 (05 Jul 2010)
+
+  05 Jul 2010; Markos Chandras <hwoarang@gentoo.org> +treeline-1.2.4.ebuild,
+  +treeline-1.3.3.ebuild:
+  Version bump wrt bug #325387
 
   04 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   treeline-1.2.3.ebuild:
